tests/compile-fail/operation_use_after_complete.stderr
error[E0382]: use of moved value: `operation`
  --> tests/compile-fail/operation_use_after_complete.rs:18:24
   |
10 |     let operation = Operation::read()
   |         --------- move occurs because `operation` has type `Operation<'_, '_, Building>`, which does not implement the `Copy` trait
...
15 |     let _moved_operation = operation;
   |                            --------- value moved here
...
18 |     let _another_use = operation.fd(1);
   |                        ^^^^^^^^^ value used here after move
